--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Jay Pozo <jay@jaymatter.com>",
   "version": "0.1.0",
   "dependencies": {
-    "oauth": "~0.9.10"
+    "oauth": "~0.9.10",
+    "pi-gpio": "0.0.2"
   }
 }
