Added description to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "twitterlisten",
   "author": "Jay Pozo <jay@jaymatter.com>",
+  "description":"Get events for keywords occuring on the Twitter stream.",
   "version": "0.1.0",
   "dependencies": {
     "oauth": "~0.9.10",
