Removed gpio dependency. Updated description.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "twitterlisten",
   "author": "Jay Pozo <jay@jaymatter.com>",
-  "description":"Get events for keywords occuring on the Twitter stream.",
+  "description":"Trigger events for keywords occuring on the Twitter stream.",
   "version": "0.1.0",
   "dependencies": {
-    "oauth": "~0.9.10",
-    "pi-gpio": "0.0.2"
+    "oauth": "~0.9.10"
   }
 }
