--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "twitterlisten",
   "author": "Jay Pozo <jay@jaymatter.com>",
   "description":"Get events for keywords occuring on the Twitter stream.",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "repository":{
+    "type":"git",
+    "url":"https://github.com/jaypozo/twitterlisten.git"
+  },
   "dependencies": {
     "oauth": "~0.9.10",
     "pi-gpio": "0.0.2"
